@@ -1,6 +1,11 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 1.001003
+ [Added / runtime requires]
+ - Capture::Tiny
+
+ [Removed / test requires]
+ - Capture::Tiny
 
 1.001002 2015-09-27T07:39:23Z
 
